--- a/app/scss/globalCSS/_hoverBox.scss
+++ b/app/scss/globalCSS/_hoverBox.scss
@@ -2,16 +2,19 @@
 @import "mixIn";
 
 // default is arrow at the bottom, see &.uparrow below for arrow at the top
-.hoverBox
-{
-
+.hoverBox {
     position:relative;
 
 	&.thisWeek
 	{
 		.colored
 		{
-			background-color: $TPBlue;
+			// background-color: $TPBlue;
+			background-color: #ffffff;
+		}
+		
+		.arrow {
+			margin-left:25x;
 		}
 	}
 
@@ -27,7 +30,7 @@
             cursor: default;
 			font-size:$fontSizeSmall;
 			font-weight:normal;
-	
+			line-height:$fontSizeXXLarge;
         }
     }
 
@@ -41,11 +44,8 @@
         right: 0px;
 
         // the bottom will be covered by the bottom bar and arrow
-        bottom: 20px;
-
-        // @include box-shadow(0px 0px 4px 1px #888888);
+        bottom: 23px;
 		@include box-shadow(0 2px 3px 0 #ADADAD);
-	
     }
 
     // bottom shadow, except for the arrow
@@ -71,40 +71,33 @@
         z-index: 2;
         width: 20px;
         height: 20px;
-        margin-left:20px;
-        @include transform(translateY(-10px) rotate(45deg));
-        @include box-shadow(0 0 3px 1px #5e5e5e);
+        margin-left:25px;
+        @include transform(translateY(-15px) rotate(45deg));
+        @include box-shadow(0 0 3px 1px #ADADAD);
+		background-color:#ffffff;
     }
 
-    .colorBar
-    {
+    .colorBar {
         position: absolute;
         z-index: 4;
         left: 0px;
         right: 0px;
         bottom: 19px;
         height: 4px;		
-		border-left:1px solid #979797;
-		border-right:1px solid #979797;
     }
 
     // the arrow and the colorBar are .colored, so we can easily override color for some popups
-    .colored
-    {
-        background-color: $TPGrey4;
+    .colored {
+		background-color: #ffffff;
     }
 
     &.uparrow {
 		width:136px;
 		
-        .hoverBoxContents
-        {
+        .hoverBoxContents {
             margin-bottom: 0px;
-            margin-top:3px;
+            margin-top:0;
             @include linearGradient(top, rgb(255,255,255), rgba(255,255,255,0.90)); 
-			border-left:1px solid #979797;
-			border-right:1px solid #979797;
-			border-bottom:1px solid #979797;
 			& label {
 			
 			}
@@ -115,31 +108,16 @@
         {
             top: 20px;
             bottom:0px;
-           	@include box-shadow(0px 2px 3px 0px #adadad);
+           	@include box-shadow(0px 1px 2px 1px #adadad);
         }
-
-        // top shadow, except for the arrow
-        /*
-        .topShadow
-        {
-            position:absolute;
-            bottom: 0px;
-            top: 19px;
-            height: 0px;
-            left: 0px;
-            right: 0px;
-            border-bottom: none;
-            border-top: 1px solid #555555;
-           @include box-shadow(0px -1px 5px 1px #333333);
-        }
-        */
 
         .arrow
         {
             position:relative;
             top:0px;
             @include transform(translateY(12px) rotate(45deg));
-            @include box-shadow(0px 0px 8px 1px #999999);
+  			@include box-shadow(0px 0px 3px 0px #adadad);
+			background-color:#ffffff;
         }
 
         .colorBar
